--- a/heptral.html
+++ b/heptral.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Heptral</title>
 </head>
 <body>
-    .header
+    <div class="header_">Lorem ipsum dolor sit amet, consectetur </div>
     
 </body>
 </html>
