--- a/heptral.html
+++ b/heptral.html
@@ -7,7 +7,18 @@
     <title>Heptral</title>
 </head>
 <body>
-    <div class="header_">Lorem ipsum dolor sit amet, consectetur </div>
+    <div class="wrapper">
+        <div class="header">
+            <div class="logo">
+                <a href="#">
+                    <img src="/img/logo_img.png" alt="">
+                </a>
+            </div>
+            <div class="logo_descript">
+                <h1>ИМЕЕТ ДВОЙНОЙ ФОКУС ДЕЙСТВИЯ</h1>
+            </div>
+        </div>
+    </div>
  
 
 
