--- a/heptral.html
+++ b/heptral.html
@@ -16,6 +16,7 @@
             </div>
             <div class="logo_descript">
                 <h1>ИМЕЕТ ДВОЙНОЙ ФОКУС ДЕЙСТВИЯ</h1>
+                <p class="logo_descript_number">1,2</p>
             </div>
         </div>
     </div>
