--- a/heptral.html
+++ b/heptral.html
@@ -16,7 +16,17 @@
             </div>
             <div class="logo_descript">
                 <h1>ИМЕЕТ ДВОЙНОЙ ФОКУС ДЕЙСТВИЯ</h1>
-                <p class="logo_descript_number">1,2</p>
+                <span class="logo_descript_number">1,2</span>
+            </div>
+        </div>
+        <div class="container">
+            <div class="logo_ademen">
+                <a href="#">
+                    <img src="/img/icn_hepatoxit.png" alt="">
+                </a>
+            </div>
+            <div class="name_ademen">
+                <h2 class="name_ademen_">Адеметионин - обязательный компонент метаболизма гепатоцита</h2>
             </div>
         </div>
     </div>
