--- a/heptral.html
+++ b/heptral.html
@@ -20,13 +20,21 @@
             </div>
         </div>
         <div class="container">
-            <div class="logo_ademen">
+            <div class="logo_ademet">
                 <a href="#">
                     <img src="/img/icn_hepatoxit.png" alt="">
                 </a>
             </div>
-            <div class="name_ademen">
-                <h2 class="name_ademen_">Адеметионин - обязательный компонент метаболизма гепатоцита</h2>
+            <div class="name_ademet">
+                <h2 class="name_ademet_">Адеметионин - обязательный компонент метаболизма гепатоцита</h2>
+            </div>
+            <div class="liver">
+                <div class="back_img">
+                    <img src="/img/Ellipse 2 copy 11.png" alt="">
+                </div>
+                <span class="back_shadow"></span>
+                <span class="back_line"></span>
+                <img src="/img/Liver.png" alt="">
             </div>
         </div>
     </div>
