--- a/heptral.html
+++ b/heptral.html
@@ -19,7 +19,7 @@
                 <span class="logo_descript_number">1,2</span>
             </div>
         </div>
-        <div class="container">
+        <div class="heading">
             <div class="logo_ademet">
                 <a href="#">
                     <img src="/img/icn_hepatoxit.png" alt="">
@@ -28,6 +28,8 @@
             <div class="name_ademet">
                 <h2 class="name_ademet_">Адеметионин - обязательный компонент метаболизма гепатоцита</h2>
             </div>
+        </div>
+        <div class="container">
             <div class="liver">
                 <div class="back_img">
                     <img src="/img/Ellipse 2 copy 11.png" alt="">
@@ -36,6 +38,7 @@
                 <span class="back_line"></span>
                 <img src="/img/Liver.png" alt="">
             </div>
+
         </div>
     </div>
  
