--- a/heptral.html
+++ b/heptral.html
@@ -30,14 +30,14 @@
             </div>
         </div>
         <div class="container">
-            <div class="liver">
+            <!-- <div class="liver">
                 <div class="back_img">
                     <img src="/img/Ellipse 2 copy 11.png" alt="">
                 </div>
                 <span class="back_shadow"></span>
                 <span class="back_line"></span>
                 <img src="/img/Liver.png" alt="">
-            </div>
+            </div> -->
         </div>
     </div>
  
