--- a/heptral.html
+++ b/heptral.html
@@ -38,6 +38,10 @@
                 <span class="back_line"></span>
                 <img src="/img/Liver.png" alt="">
             </div>
+            <div class="arrow_left">
+                <img src="/img/arrow_left.png" alt="">
+            </div>
+            <div class="geptral_big"></div>
         </div>
     </div>
  
