--- a/heptral.html
+++ b/heptral.html
@@ -41,7 +41,9 @@
             <div class="arrow_left">
                 <img src="/img/arrow_left.png" alt="">
             </div>
-            <div class="geptral_big"></div>
+            <div class="geptral_big">
+                <img src="/img/geptral_big.png" alt="">
+            </div>
         </div>
     </div>
  
