--- a/heptral.html
+++ b/heptral.html
@@ -44,6 +44,9 @@
             <div class="geptral_big">
                 <img src="/img/geptral_big.png" alt="">
             </div>
+            <div class="geptral_small">
+                <img src="/img/geptral_small.png" alt="">
+            </div>
         </div>
     </div>
  
