--- a/heptral.html
+++ b/heptral.html
@@ -47,6 +47,9 @@
             <div class="geptral_small">
                 <img src="/img/geptral_small.png" alt="">
             </div>
+            <div class="arrow_right">
+                <img src="/img/arrow_right.png" alt="">
+            </div>
         </div>
     </div>
  
