--- a/heptral.html
+++ b/heptral.html
@@ -31,7 +31,7 @@
         </div>
         <div class="container">
             <div class="liver">
-                <div class="back_img">
+                <div class="back_liver">
                     <img src="/img/Ellipse 2 copy 11.png" alt="">
                 </div>
                 <span class="back_shadow"></span>
@@ -49,6 +49,11 @@
             </div>
             <div class="arrow_right">
                 <img src="/img/arrow_right.png" alt="">
+            </div>
+            <div class="brain">
+                <div class="back_brain">
+                    <img src="/img/Ellipse 2 copy 12.png" alt="">
+                </div>
             </div>
         </div>
     </div>
