--- a/heptral.html
+++ b/heptral.html
@@ -54,6 +54,9 @@
                 <div class="back_brain">
                     <img src="/img/Ellipse 2 copy 12.png" alt="">
                 </div>
+                <span class="back_shadow"></span>
+                <span class="back_line"></span>
+                <img src="" alt="">
             </div>
         </div>
     </div>
