--- a/heptral.html
+++ b/heptral.html
@@ -56,7 +56,7 @@
                 </div>
                 <span class="back_shadow"></span>
                 <span class="back_line"></span>
-                <img src="" alt="">
+                <img src="/img/brain.png" alt="">
             </div>
         </div>
     </div>
