--- a/heptral.html
+++ b/heptral.html
@@ -29,7 +29,7 @@
                 <h2 class="name_ademet_">Адеметионин - обязательный компонент метаболизма гепатоцита</h2>
             </div>
         </div>
-        <div class="container">
+        <div class="container_int">
             <div class="liver">
                 <div class="back_liver">
                     <img src="/img/Ellipse 2 copy 11.png" alt="">
@@ -59,6 +59,8 @@
                 <img src="/img/brain.png" alt="">
             </div>
         </div>
+        <div class="text_rotate">UKR2119988</div>
+        .container_
     </div>
  
 
