--- a/heptral.html
+++ b/heptral.html
@@ -60,7 +60,12 @@
             </div>
         </div>
         <div class="text_rotate">UKR2119988</div>
-        .container_
+        <div class="container_2">
+            <span class="line_vert_left"></span>
+            <div class="liver_func">
+                
+            </div>
+        </div>
     </div>
  
 
