--- a/heptral.html
+++ b/heptral.html
@@ -63,7 +63,14 @@
         <div class="container_2">
             <span class="line_vert_left"></span>
             <div class="liver_func">
-                
+                <div class="arrow_top_left">
+                    <div class="arrow_ellipse">
+                        <img src="/img/arrow_ellipse_top.png" alt="">
+                    </div>
+                    <div class="arrow_allipse_w">
+                        <img src="/img/arrow_allipse_w.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
