--- a/heptral.html
+++ b/heptral.html
@@ -70,6 +70,9 @@
                     <div class="arrow_allipse_w">
                         <img src="/img/arrow_allipse_w.png" alt="">
                     </div>
+                    <div class="arrow_ellipse_green">
+                        <img src="/img/arrow_ellipse_green.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
