--- a/heptral.html
+++ b/heptral.html
@@ -29,6 +29,7 @@
                 <h2 class="name_ademet_">Адеметионин - обязательный компонент метаболизма гепатоцита</h2>
             </div>
         </div>
+<!-- =========================================Container 1================================================= -->
         <div class="container_int">
             <div class="liver">
                 <div class="back_liver">
@@ -60,10 +61,11 @@
             </div>
         </div>
         <div class="text_rotate">UKR2119988</div>
+<!-- ============================================Container 2========================================= -->
         <div class="container_2">
             <span class="line_vert_left"></span>
             <div class="liver_func">
-                <div class="arrow_top_left">
+                <div class="arrow_top_left" id="arrow_turn_right">
                     <div class="arrow_ellipse">
                         <img src="/img/arrow_ellipse_top.png" alt="">
                     </div>
