--- a/heptral.html
+++ b/heptral.html
@@ -77,6 +77,32 @@
                     </div>
                 </div>
             </div>
+            <div class="liver_func">
+                <div class="arrow_top_left" id="arrow_turn_right">
+                    <div class="arrow_ellipse">
+                        <img src="/img/arrow_ellipse_top.png" alt="">
+                    </div>
+                    <div class="arrow_allipse_w">
+                        <img src="/img/arrow_allipse_w.png" alt="">
+                    </div>
+                    <div class="arrow_ellipse_green">
+                        <img src="/img/arrow_ellipse_green.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="liver_func">
+                <div class="arrow_top_left" id="arrow_turn_right">
+                    <div class="arrow_ellipse">
+                        <img src="/img/arrow_ellipse_top.png" alt="">
+                    </div>
+                    <div class="arrow_allipse_w">
+                        <img src="/img/arrow_allipse_w.png" alt="">
+                    </div>
+                    <div class="arrow_ellipse_green">
+                        <img src="/img/arrow_ellipse_green.png" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
  
