--- a/heptral.html
+++ b/heptral.html
@@ -76,18 +76,8 @@
                         <img src="/img/arrow_ellipse_green.png" alt="">
                     </div>
                 </div>
-            </div>
-            <div class="liver_func">
-                <div class="arrow_top_left" id="arrow_turn_right">
-                    <div class="arrow_ellipse">
-                        <img src="/img/arrow_ellipse_top.png" alt="">
-                    </div>
-                    <div class="arrow_allipse_w">
-                        <img src="/img/arrow_allipse_w.png" alt="">
-                    </div>
-                    <div class="arrow_ellipse_green">
-                        <img src="/img/arrow_ellipse_green.png" alt="">
-                    </div>
+                <div class="arrow_top_left_text">
+                    <p>Обеспечивает<span>антиоксидантное</span>и<span>дезинтоксикационное</span>действие</p>
                 </div>
             </div>
             <div class="liver_func">
@@ -102,7 +92,27 @@
                         <img src="/img/arrow_ellipse_green.png" alt="">
                     </div>
                 </div>
+                <div class="arrow_top_left_text">
+                    <p><span>Восстанавливает структуру</span>мембран гепатоцитов</p>
+                </div>
             </div>
+            <div class="liver_func">
+                <div class="arrow_top_left" id="arrow_turn_right">
+                    <div class="arrow_ellipse">
+                        <img src="/img/arrow_ellipse_top.png" alt="">
+                    </div>
+                    <div class="arrow_allipse_w">
+                        <img src="/img/arrow_allipse_w.png" alt="">
+                    </div>
+                    <div class="arrow_ellipse_green">
+                        <img src="/img/arrow_ellipse_green.png" alt="">
+                    </div>
+                </div>
+                <div class="arrow_top_left_text">
+                    <p>Способствует<span>выведению</span>токсических желчных кислот</p>
+                </div>
+            </div>
+            <span class="line_vert_right"></span>
         </div>
     </div>
  
