--- a/heptral.html
+++ b/heptral.html
@@ -113,6 +113,22 @@
                 </div>
             </div>
             <span class="line_vert_right"></span>
+            <div class="brain_func">
+                <div class="arrow_top_right" id="arrow_turn_left">
+                    <div class="arrow_ellipse">
+                        <img src="/img/arrow_ellipse_top.png" alt="">
+                    </div>
+                    <div class="arrow_allipse_w">
+                        <img src="/img/arrow_allipse_w.png" alt="">
+                    </div>
+                    <div class="arrow_ellipse_green">
+                        <img src="/img/arrow_ellipse_green_turn_left.png" alt="">
+                    </div>
+                </div>
+                <div class="arrow_top_right_text">
+                    <p>Снижает симптомы<span>патологической усталости</span></p>
+                </div>
+            </div>
         </div>
     </div>
  
