--- a/heptral.html
+++ b/heptral.html
@@ -129,6 +129,24 @@
                     <p>Снижает симптомы<span>патологической усталости</span></p>
                 </div>
             </div>
+<!-- ======================================Info centre============================================================== -->
+            <div class="info_right">
+                <div class="info_hand">
+                    <a href="#">
+                        <img src="/img/hand_icon.png" alt="">
+                    </a>
+                </div>
+                <div class="info_i">
+                    <a href="#">
+                        <img src="../img/info_icon.png" alt="">
+                    </a>
+                </div>
+                <div class="info_book">
+                    <a href="#">
+                        <img src="/img/book_icon.png" alt="">
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
  
