--- a/heptral.html
+++ b/heptral.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Heptral</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
         <div class="header">
             <div class="logo">
                 <a href="#">
-                    <img src="/img/logo_img.png" alt="">
+                    <img src="../img/logo_img.png" alt="">
                 </a>
             </div>
             <div class="logo_descript">
@@ -22,7 +23,7 @@
         <div class="heading">
             <div class="logo_ademet">
                 <a href="#">
-                    <img src="/img/icn_hepatoxit.png" alt="">
+                    <img src="../img/icn_hepatoxit.png" alt="">
                 </a>
             </div>
             <div class="name_ademet">
@@ -33,31 +34,31 @@
         <div class="container_int">
             <div class="liver">
                 <div class="back_liver">
-                    <img src="/img/Ellipse 2 copy 11.png" alt="">
+                    <img src="../img/Ellipse 2 copy 11.png" alt="">
                 </div>
                 <span class="back_shadow"></span>
                 <span class="back_line"></span>
-                <img src="/img/Liver.png" alt="">
+                <img src="../img/Liver.png" alt="">
             </div>
             <div class="arrow_left">
-                <img src="/img/arrow_left.png" alt="">
+                <img src="../img/arrow_left.png" alt="">
             </div>
             <div class="geptral_big">
-                <img src="/img/geptral_big.png" alt="">
+                <img src="../img/geptral_big.png" alt="">
             </div>
             <div class="geptral_small">
-                <img src="/img/geptral_small.png" alt="">
+                <img src="../img/geptral_small.png" alt="">
             </div>
             <div class="arrow_right">
-                <img src="/img/arrow_right.png" alt="">
+                <img src="../img/arrow_right.png" alt="">
             </div>
             <div class="brain">
                 <div class="back_brain">
-                    <img src="/img/Ellipse 2 copy 12.png" alt="">
+                    <img src="../img/Ellipse 2 copy 12.png" alt="">
                 </div>
                 <span class="back_shadow"></span>
                 <span class="back_line"></span>
-                <img src="/img/brain.png" alt="">
+                <img src="../img/brain.png" alt="">
             </div>
         </div>
         <div class="text_rotate">UKR2119988</div>
@@ -67,13 +68,13 @@
             <div class="liver_func">
                 <div class="arrow_top_left" id="arrow_turn_right">
                     <div class="arrow_ellipse">
-                        <img src="/img/arrow_ellipse_top.png" alt="">
+                        <img src="../img/arrow_ellipse_top.png" alt="">
                     </div>
                     <div class="arrow_allipse_w">
-                        <img src="/img/arrow_allipse_w.png" alt="">
+                        <img src="../img/arrow_allipse_w.png" alt="">
                     </div>
                     <div class="arrow_ellipse_green">
-                        <img src="/img/arrow_ellipse_green.png" alt="">
+                        <img src="../img/arrow_ellipse_green.png" alt="">
                     </div>
                 </div>
                 <div class="arrow_top_left_text">
@@ -83,13 +84,13 @@
             <div class="liver_func">
                 <div class="arrow_top_left" id="arrow_turn_right">
                     <div class="arrow_ellipse">
-                        <img src="/img/arrow_ellipse_top.png" alt="">
+                        <img src="../img/arrow_ellipse_top.png" alt="">
                     </div>
                     <div class="arrow_allipse_w">
-                        <img src="/img/arrow_allipse_w.png" alt="">
+                        <img src="../img/arrow_allipse_w.png" alt="">
                     </div>
                     <div class="arrow_ellipse_green">
-                        <img src="/img/arrow_ellipse_green.png" alt="">
+                        <img src="../img/arrow_ellipse_green.png" alt="">
                     </div>
                 </div>
                 <div class="arrow_top_left_text">
@@ -99,13 +100,13 @@
             <div class="liver_func">
                 <div class="arrow_top_left" id="arrow_turn_right">
                     <div class="arrow_ellipse">
-                        <img src="/img/arrow_ellipse_top.png" alt="">
+                        <img src="../img/arrow_ellipse_top.png" alt="">
                     </div>
                     <div class="arrow_allipse_w">
-                        <img src="/img/arrow_allipse_w.png" alt="">
+                        <img src="../img/arrow_allipse_w.png" alt="">
                     </div>
                     <div class="arrow_ellipse_green">
-                        <img src="/img/arrow_ellipse_green.png" alt="">
+                        <img src="../img/arrow_ellipse_green.png" alt="">
                     </div>
                 </div>
                 <div class="arrow_top_left_text">
@@ -116,13 +117,13 @@
             <div class="brain_func">
                 <div class="arrow_top_right" id="arrow_turn_left">
                     <div class="arrow_ellipse">
-                        <img src="/img/arrow_ellipse_top.png" alt="">
+                        <img src="../img/arrow_ellipse_top.png" alt="">
                     </div>
                     <div class="arrow_allipse_w">
-                        <img src="/img/arrow_allipse_w.png" alt="">
+                        <img src="../img/arrow_allipse_w.png" alt="">
                     </div>
                     <div class="arrow_ellipse_green">
-                        <img src="/img/arrow_ellipse_green_turn_left.png" alt="">
+                        <img src="../img/arrow_ellipse_green_turn_left.png" alt="">
                     </div>
                 </div>
                 <div class="arrow_top_right_text">
@@ -133,7 +134,7 @@
             <div class="info_right">
                 <div class="info_hand">
                     <a href="#">
-                        <img src="/img/hand_icon.png" alt="">
+                        <img src="../img/hand_icon.png" alt="">
                     </a>
                 </div>
                 <div class="info_i">
@@ -143,7 +144,7 @@
                 </div>
                 <div class="info_book">
                     <a href="#">
-                        <img src="/img/book_icon.png" alt="">
+                        <img src="../img/book_icon.png" alt="">
                     </a>
                 </div>
             </div>
