--- a/heptral.html
+++ b/heptral.html
@@ -27,7 +27,7 @@
                 </a>
             </div>
             <div class="name_ademet">
-                <h2 class="name_ademet_">Адеметионин - обязательный компонент метаболизма гепатоцита</h2>
+                <h2 class="name_ademet_">Адеметионин - обязательный компонент <br>метаболизма гепатоцита</h2>
             </div>
         </div>
 <!-- =========================================Container 1================================================= -->
