--- a/heptral.html
+++ b/heptral.html
@@ -36,7 +36,7 @@
                 <div class="back_liver">
                     <img src="../img/Ellipse 2 copy 11.png" alt="">
                     <span class="back_shadow"></span>
-                    <span class="back_line"></span>
+                    <span class="back_line" id="back_line_canv"></span>
                 </div>
                 <img src="../img/Liver.png" alt="">
             </div>
