--- a/heptral.html
+++ b/heptral.html
@@ -157,6 +157,6 @@
 
 
 
-<script type="text/javascript" src="/js/main.js"></script>
+<script type="text/javascript" src="../js/main.js"></script>
 </body>
 </html>
