--- a/heptral.html
+++ b/heptral.html
@@ -37,7 +37,7 @@
                     <img src="../img/Ellipse 2 copy 11.png" alt="">
                     <span class="back_shadow"></span>
                     <span class="back_line" id="back_line_canv"></span>
-                    <canvas id="back_line_canv" width="500px" height="400px"></canvas>
+                    <canvas id="canv_line" width="500px" height="400px"></canvas>
                 </div>
                 <img src="../img/Liver.png" alt="">
             </div>
