--- a/heptral.html
+++ b/heptral.html
@@ -26,6 +26,7 @@
                     <img src="../img/icn_hepatoxit.png" alt="">
                 </a>
             </div>
+            <button id="bnt_logo"></button>
             <div class="name_ademet">
                 <h2 class="name_ademet_">Адеметионин - обязательный компонент <br>метаболизма гепатоцита</h2>
             </div>
