--- a/heptral.html
+++ b/heptral.html
@@ -37,7 +37,7 @@
                     <img src="../img/Ellipse 2 copy 11.png" alt="">
                     <span class="back_shadow"></span>
                     <span class="back_line" id="back_line_canv">
-                        <img src="../img/Ellipse 2 copy 5.png" alt="">
+                        <img id="back_line_img" src="../img/Ellipse 2 copy 5.png" alt="">
                     </span>
                 </div>
                 <img src="../img/Liver.png" alt="">
