--- a/heptral.html
+++ b/heptral.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <div class="header">
-            <div class="logo">
+            <div class="header__logo">
                 <a href="#">
                     <img src="../img/logo_img.png" alt="">
                 </a>
