--- a/heptral.html
+++ b/heptral.html
@@ -15,9 +15,8 @@
                     <img src="../img/logo_img.png" alt="">
                 </a>
             </div>
-            <div class="logo_descript">
-                <h1>ИМЕЕТ ДВОЙНОЙ ФОКУС ДЕЙСТВИЯ</h1>
-                <span class="logo_descript_number">1,2</span>
+            <div class="header__descript">
+                <h1>ИМЕЕТ ДВОЙНОЙ ФОКУС ДЕЙСТВИЯ <span class="header__descript__number">1,2</span></h1>
             </div>
         </div>
         <div class="heading">
