--- a/heptral.html
+++ b/heptral.html
@@ -16,7 +16,7 @@
                 </a>
             </div>
             <div class="header__descript">
-                <h1>ИМЕЕТ ДВОЙНОЙ ФОКУС ДЕЙСТВИЯ <span class="header__descript__number">1,2</span></h1>
+                <h1>ИМЕЕТ ДВОЙНОЙ ФОКУС ДЕЙСТВИЯ <span class="header__number">1,2</span></h1>
             </div>
         </div>
         <div class="heading">
