--- a/heptral.html
+++ b/heptral.html
@@ -20,13 +20,13 @@
             </div>
         </div>
         <div class="heading">
-            <div class="logo_ademet">
+            <div class="heading__logo">
                 <a href="#">
                     <img src="../img/icn_hepatoxit.png" alt="">
                 </a>
             </div>
-            <div class="name_ademet">
-                <h2 class="name_ademet_">Адеметионин - обязательный компонент <br>метаболизма гепатоцита</h2>
+            <div class="heading__tittle">
+                <h2 class="heading__name">Адеметионин - обязательный компонент <br>метаболизма гепатоцита</h2>
             </div>
         </div>
 <!-- =========================================Container 1================================================= -->
