--- a/heptral.html
+++ b/heptral.html
@@ -30,8 +30,8 @@
             </div>
         </div>
 <!-- =========================================Container 1================================================= -->
-        <div class="container_int">
-            <div class="liver">
+        <div class="container-int">
+            <div class="container-int__liver">
                 <div class="back_liver">
                     <img src="../img/Ellipse 2 copy 11.png" alt="">
                     <span class="back_shadow"></span>
