--- a/heptral.html
+++ b/heptral.html
@@ -30,13 +30,13 @@
             </div>
         </div>
 <!-- =========================================Container 1================================================= -->
-        <div class="container-int">
-            <div class="container-int__liver">
-                <div class="back_liver">
+        <div class="container">
+            <div class="container__liver">
+                <div class="liver__back">
                     <img src="../img/Ellipse 2 copy 11.png" alt="">
-                    <span class="back_shadow"></span>
-                    <span class="back_line" id="back_line_canv">
-                        <img id="back_line_img" src="../img/Ellipse 2 copy 5.png" alt="">
+                    <span class="liver__shadow"></span>
+                    <span class="liver__line">
+                        <img id="liver__img" src="../img/Ellipse 2 copy 5.png" alt="">
                     </span>
                 </div>
                 <img src="../img/Liver.png" alt="">
