--- a/heptral.html
+++ b/heptral.html
@@ -41,48 +41,48 @@
                 </div>
                 <img src="../img/Liver.png" alt="">
             </div>
-            <div class="arrow_left">
+            <div class="container__left">
                 <img src="../img/arrow_left.png" alt="">
             </div>
-            <div class="geptral_big">
+            <div class="container__geptral">
                 <img src="../img/geptral_big.png" alt="">
             </div>
-            <div class="geptral_small">
+            <div class="container__geptral2">
                 <img src="../img/geptral_small.png" alt="">
             </div>
-            <div class="arrow_right">
+            <div class="container__right">
                 <img src="../img/arrow_right.png" alt="">
             </div>
-            <div class="brain">
-                <div class="back_brain">
+            <div class="container__brain">
+                <div class="brain__back">
                     <img src="../img/Ellipse 2 copy 12.png" alt="">
                 </div>
-                <span class="back_shadow"></span>
-                <span class="back_line"></span>
+                <span class="brain__shadow"></span>
+                <span class="brain__line"></span>
                 <img src="../img/brain.png" alt="">
             </div>
         </div>
-        <div class="text_rotate">UKR2119988</div>
+        <div class="container__text-rotate">UKR2119988</div>
 <!-- ============================================Container 2========================================= -->
-        <div class="container_2">
-            <span class="line_vert_left"></span>
-            <div class="liver_func">
-                <div class="arrow_top_left" id="arrow_turn_right">
-                    <div class="arrow_ellipse">
+        <div class="container-2">
+            <span class="container-2__line-left"></span>
+            <div class="container-2__liver-func">
+                <div class="liver-func__arrow-top-left" id="arrow-turn-right">
+                    <div class="liver-func__arrow-ellipse">
                         <img src="../img/arrow_ellipse_top.png" alt="">
                     </div>
-                    <div class="arrow_allipse_w">
+                    <div class="liver-func__arrow-allipse-w">
                         <img src="../img/arrow_allipse_w.png" alt="">
                     </div>
-                    <div class="arrow_ellipse_green">
+                    <div class="liver-func__arrow-ellipse-green">
                         <img src="../img/arrow_ellipse_green.png" alt="">
                     </div>
                 </div>
-                <div class="arrow_top_left_text">
+                <div class="liver-func__arrow-top-left-text">
                     <p>Обеспечивает<span>антиоксидантное</span>и<span>дезинтоксикационное</span>действие</p>
                 </div>
             </div>
-            <div class="liver_func">
+            <div class="container-2__liver-func">
                 <div class="arrow_top_left" id="arrow_turn_right">
                     <div class="arrow_ellipse">
                         <img src="../img/arrow_ellipse_top.png" alt="">
