--- a/heptral.html
+++ b/heptral.html
@@ -83,38 +83,38 @@
                 </div>
             </div>
             <div class="container-2__liver-func">
-                <div class="arrow_top_left" id="arrow_turn_right">
-                    <div class="arrow_ellipse">
+                <div class="liver-func__arrow-top-left" id="arrow-turn-right">
+                    <div class="liver-func__arrow-ellipse">
                         <img src="../img/arrow_ellipse_top.png" alt="">
                     </div>
-                    <div class="arrow_allipse_w">
+                    <div class="liver-func__arrow-allipse-w">
                         <img src="../img/arrow_allipse_w.png" alt="">
                     </div>
-                    <div class="arrow_ellipse_green">
+                    <div class="liver-func__arrow-ellipse-green">
                         <img src="../img/arrow_ellipse_green.png" alt="">
                     </div>
                 </div>
-                <div class="arrow_top_left_text">
+                <div class="liver-func__arrow-top-left-text">
                     <p><span>Восстанавливает структуру</span>мембран гепатоцитов</p>
                 </div>
             </div>
-            <div class="liver_func">
-                <div class="arrow_top_left" id="arrow_turn_right">
-                    <div class="arrow_ellipse">
+            <div class="container-2__liver-func">
+                <div class="liver-func__arrow-top-left" id="arrow-turn-right">
+                    <div class="liver-func__arrow-ellipse">
                         <img src="../img/arrow_ellipse_top.png" alt="">
                     </div>
-                    <div class="arrow_allipse_w">
+                    <div class="liver-func__arrow-allipse-w">
                         <img src="../img/arrow_allipse_w.png" alt="">
                     </div>
-                    <div class="arrow_ellipse_green">
+                    <div class="liver-func__arrow-ellipse-green">
                         <img src="../img/arrow_ellipse_green.png" alt="">
                     </div>
                 </div>
-                <div class="arrow_top_left_text">
+                <div class="liver-func__arrow-top-left-text">
                     <p>Способствует<span>выведению</span>токсических желчных кислот</p>
                 </div>
             </div>
-            <span class="line_vert_right"></span>
+            <span class="liver-func__line-vert-right"></span>
             <div class="brain_func">
                 <div class="arrow_top_right" id="arrow_turn_left">
                     <div class="arrow_ellipse">
