--- a/heptral.html
+++ b/heptral.html
@@ -115,19 +115,19 @@
                 </div>
             </div>
             <span class="liver-func__line-vert-right"></span>
-            <div class="brain_func">
-                <div class="arrow_top_right" id="arrow_turn_left">
-                    <div class="arrow_ellipse">
+            <div class="container-2__brain-func">
+                <div class="brain-func__arrow-top-right" id="arrow-turn-left">
+                    <div class="brain-func__arrow-ellipse">
                         <img src="../img/arrow_ellipse_top.png" alt="">
                     </div>
-                    <div class="arrow_allipse_w">
+                    <div class="brain-func__arrow-allipse-w">
                         <img src="../img/arrow_allipse_w.png" alt="">
                     </div>
-                    <div class="arrow_ellipse_green">
+                    <div class="brain-func__arrow-ellipse-green">
                         <img src="../img/arrow_ellipse_green_turn_left.png" alt="">
                     </div>
                 </div>
-                <div class="arrow_top_right_text">
+                <div class="brain-func__arrow-top-right-text">
                     <p>Снижает симптомы<span>патологической усталости</span></p>
                 </div>
             </div>
