--- a/heptral.html
+++ b/heptral.html
@@ -132,18 +132,18 @@
                 </div>
             </div>
 <!-- ======================================Info centre============================================================== -->
-            <div class="info_right">
-                <div class="info_hand">
+            <div class="info">
+                <div class="info__hand">
                     <a href="#">
                         <img src="../img/hand_icon.png" alt="">
                     </a>
                 </div>
-                <div class="info_i">
+                <div class="info__i">
                     <a href="#">
                         <img src="../img/info_icon.png" alt="">
                     </a>
                 </div>
-                <div class="info_book">
+                <div class="info__book">
                     <a href="#">
                         <img src="../img/book_icon.png" alt="">
                     </a>
